--- a/index.html
+++ b/index.html
@@ -129,6 +129,26 @@
 </main>
 <footer>
     <p>Todos los derechos reservados &copy; <a href="mailto:ps.enrique.e@gmail.com">Enrique Plascencia</a>, Jal. Mexico, 2022</p>
+    <!-- <p> &copy; <a href="mailto:ps.enrique.e@gmail.com">Nucleo Dental </a>
+         <a href="https://www.facebook.com/proatencionmedica">
+        <svg xmlns="http://www.w3.org/2000/svg" class="red_social shadow" width="52" height="52"
+            viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+        </svg>
+    </a>
+    <a href="https://www.instagram.com/nucleodental.mzo/">
+        <svg xmlns="http://www.w3.org/2000/svg" class="red_social shadow" width="52" height="52"
+            viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <rect x="4" y="4" width="16" height="16" rx="4" />
+            <circle cx="12" cy="12" r="3" />
+            <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+        </svg>
+    </a>
+</p> -->
 </footer>
 
 </body>
