--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <article class="contenedor">
         <div class="icono_contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
         <h4>Contactanos</h4>
-        <p>Encuentra toda la informacion para ponerte en contacto conmigo</p>
+        <p>Encuentra toda la informacion para ponerte en contacto con nosotros.</p>
     </article>
 </section>
 
