chore | Se actualizó la ubicación.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <!-- icono ubicacion -->
                 <div class="ubicacion shadow">
                     <img class="mapa" src="./img/mapa.png">
-                    <p><a class="none" href="https://goo.gl/maps/cexKpZhS6BCoSfKCA">Guadalajara</a> y <a class="none" href="https://g.page/Nucleodentalmanzanillo?share">Manzanillo</a></p>
+                    <p><a class="none" href="https://goo.gl/maps/cexKpZhS6BCoSfKCA">Av. Lopez Mateos Nte 567, Guadalajara</a></p>
                 </div>
 
                 <!-- enlace a WhatsApp -->
