Se agregaron favicon e iconos para movil.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Iconos -->
+    <link rel="icon" type="image/x-icon" href="./metadatos/favicon.ico">
+    <link rel="icon" sizes="192x192" href="./metadatos/apple-touch-icon-192x192.png">
+    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./metadatos/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./metadatos/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./metadatos/apple-touch-icon-180x180.png">
+
 <!-- normalize -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 <!-- Inicio google fonts -->
