--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
 
 <!-- Inicio navegacion -->
 
-        <section class="navegacion-background">
-            <nav class="navegacion-barra">
-                <a href="index.html">Inicio</a>
-                <a href="#">Tratamientos</a>
-                <a href="#">Donde nos ubicamos</a>
-                <a href="#">Contactanos</a>
+        <section>
+            <nav class="navegacion-background">
+                <ul class="navegacion-barra">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#">Tratamientos</a></li>
+                    <li><a href="#">Donde nos ubicamos</a></li>
+                    <li><a href="#">Contactanos</a></li>
+                </ul>
             </nav>
         </section>
         <!-- Final navegacion -->
