Se agregó un menú flotante con errores

--- a/index.html
+++ b/index.html
@@ -32,14 +32,25 @@
 
 <!-- Inicio navegacion -->
 
-        <section>
-            <nav class="navegacion-background">
-                <ul class="navegacion-barra">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#">Tratamientos</a></li>
-                    <li><a href="#">Donde nos ubicamos</a></li>
-                    <li><a href="#">Contactanos</a></li>
-                </ul>
+        <section class="navegacion">
+
+            <div class="navegacion_menu">
+                <a href="#" class="menu_boton"><span><svg xmlns="http://www.w3.org/2000/svg" class="icono-menu" width="24" height="24" viewBox="0 0 24 20" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <line x1="4" y1="6" x2="20" y2="6" />
+                    <line x1="4" y1="12" x2="20" y2="12" />
+                    <line x1="4" y1="18" x2="20" y2="18" />
+                  </svg></span>Categorías </a>
+            </div>
+
+
+
+
+            <nav class="navegacion-barra">
+                <a href="index.html">Inicio</a>
+                <a href="#">Tratamientos</a>
+                <a href="#">Donde nos ubicamos</a>
+                <a href="#">Contactanos</a>
             </nav>
         </section>
         <!-- Final navegacion -->
@@ -160,6 +171,9 @@
     </a>
 </p> -->
 </footer>
+
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="/js/menu.js"></script>
 
 </body>
 </html>
