--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 </footer>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="/js/menu.js"></script>
+<script src="./js/menu.js"></script>
 
 </body>
 </html>
