--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 </p> -->
 </footer>
 
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 <script src="./js/menu.js"></script>
 
 </body>
