Se terminó el menú de navegacion.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
         <section class="navegacion">
 
             <div class="navegacion_menu">
-                <a href="#" class="menu_boton"><span><svg xmlns="http://www.w3.org/2000/svg" class="icono-menu" width="24" height="24" viewBox="0 0 24 20" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <a href="#" class="menu_boton">
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icono-menu" width="24" height="24" viewBox="0 0 24 20" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <line x1="4" y1="6" x2="20" y2="6" />
                     <line x1="4" y1="12" x2="20" y2="12" />
                     <line x1="4" y1="18" x2="20" y2="18" />
-                  </svg></span>Categorías </a>
+                  </svg>
+                </span>Núcleo Dental</a>
             </div>
 
             <nav class="navegacion-barra">
