Se modificaron los derechos.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 </main>
 <footer>
-    <p>Todos los derechos reservados &copy; <a href="mailto:ps.enrique.e@gmail.com">Enrique Plascencia</a>, Jal. Mexico, 2022</p>
+    <p>Todos los derechos reservados &copy; <a href="mailto:ps.enrique.e@gmail.com">Núcleo Dental</a>, Jal. Mexico, 2022</p>
     <!-- <p> &copy; <a href="mailto:ps.enrique.e@gmail.com">Nucleo Dental </a>
          <a href="https://www.facebook.com/proatencionmedica">
         <svg xmlns="http://www.w3.org/2000/svg" class="red_social shadow" width="52" height="52"
