--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
                 <a href="#">Tratamientos</a>
                 <a href="#">Donde nos ubicamos</a>
                 <a href="#">Contactanos</a>
+                <div class="nada">
+                    
+
+                </div>
             </nav>
+
+
+
         </section>
         <!-- Final navegacion -->
     
