chore | se agregaron paginas extra y se experimenta con mapas

--- a/tratamientos.html
+++ b/tratamientos.html
@@ -46,8 +46,8 @@
             </div>
 
             <nav class="navegacion-barra">
-                <a class="activo" href="index.html">Inicio</a>
-                <a href="tratamientos.html">Tratamientos</a>
+                <a href="index.html">Inicio</a>
+                <a class="activo" href="tratamientos.html">Tratamientos</a>
                 <a href="ubicacion.html">Ubicación y contacto</a>
                 <div class="nada">
                     
