Se arreglo un bug en celulares.
Un bug detectaba la pagina con mas pixeles de los que realmente requeria.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <section class="grid"> <!-- Inicio de GRID -->
     <article class="contenedor">
         <!-- icono quienes somos -->
-        <div class="icono_contenedor"><img class="icono" src="./img/quienes.png"></div>
+        <div class="icono__contenedor"><img class="icono" src="./img/quienes.png"></div>
         <h4>Quiénes somos</h4>
         <p>En Núcleo dental somos un grupo de odontólogos dispuestos al diagnóstico, tratamiento y prevención de las
             enfermedades que afectan al Aparato Estomatognático de la manera más amable y responsable, siempre buscando
@@ -138,7 +138,7 @@
     </article>
     <!-- Conoce nuestros tratamientos -->
     <article class="contenedor">
-        <div class="icono_contenedor"><img class="icono" src="./img/chair.png"></div>
+        <div class="icono__contenedor"><img class="icono" src="./img/chair.png"></div>
         <h4>Conoce nuestros tratamientos</h4>
         <p>Nos especializamos en... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati eligendi ut non
             harum incidunt ducimus consectetur suscipit beatae quia deleniti distinctio ipsum quas vel in, perferendis
@@ -146,7 +146,7 @@
     </article>
     <!-- contactanos -->
     <article class="contenedor">
-        <div class="icono_contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
+        <div class="icono__contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
         <h4>Contactanos</h4>
         <p>Encuentra toda la informacion para ponerte en contacto con nosotros.</p>
     </article>
