--- a/ubicacion.html
+++ b/ubicacion.html
@@ -122,27 +122,26 @@
         </section> <!-- Final .portada -->
 <!-- Final portada -->
 <main class="main">
-    
-    <section>
-        <h3>Ubicación y contacto</h3>
 
-
-
-
-</section>
 <section class="grid__ubicacion"> <!-- Inicio de GRID -->
+
     <article class="contenedor__ubicacion">
-        <div class="icono_contenedor"><img class="icono" src="./img/mapa.png"></div>
-        <h4>Ubicación</h4>
+
+        <div class="icono__contenedor"><img class="icono" src="./img/mapa.png"></div>
+        <h4 class="titulo__ubicacion">Ubicación</h4>
         <p>En Núcleo dental somos un grupo de odontólogos dispuestos al diagnóstico, tratamiento y prevención de las
             enfermedades que afectan al Aparato Estomatognático de la manera más amable y responsable, siempre buscando
             éxito de cada tratamiento y sobre todo la satisfacción del paciente.</p>
         <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3732.6218183881774!2d-103.3807526!3d20.6849594!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428ae153f69a8ab%3A0x6206ba4f047d9e38!2sCentro%20L%C3%B3pez%20Mateos!5e0!3m2!1ses!2smx!4v1668391426546!5m2!1ses!2smx" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
-    </article>
+         </article>
+
+         <article class="contenedor__ubicacion--linea"></article>
+
+
     
     <article class="contenedor__ubicacion">
-        <div class="icono_contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
-        <h4>Contáctanos</h4>
+        <div class="icono__contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
+        <h4 class="titulo__ubicacion">Contacto</h4>
         <p>En Núcleo dental somos un grupo de odontólogos dispuestos al diagnóstico, tratamiento y prevención de las
             enfermedades que afectan al Aparato Estomatognático de la manera más amable y responsable, siempre buscando
             éxito de cada tratamiento y sobre todo la satisfacción del paciente.</p>
