Se agegó etiqueta faltante
Se agegó etiqueta faltante que causaba bug de pantalla en movil

--- a/ubicacion.html
+++ b/ubicacion.html
@@ -122,54 +122,44 @@
         </section> <!-- Final .portada -->
 <!-- Final portada -->
 <main class="main">
+    <section>
+        <h3>Conocenos</h3>
+    </section>
+    <section class="grid__ubicacion">
+        <!-- Inicio de GRID -->
 
-<section class="grid__ubicacion"> <!-- Inicio de GRID -->
+        <article class="contenedor__ubicacion">
 
-    <article class="contenedor__ubicacion">
+            <div class="icono__contenedor"><img class="icono" src="./img/mapa.png"></div>
+            <h4 class="titulo__ubicacion">Ubicación</h4>
+            <p>En Núcleo dental somos un grupo de odontólogos dispuestos al diagnóstico, tratamiento y prevención de las
+                enfermedades que afectan al Aparato Estomatognático de la manera más amable y responsable, siempre
+                buscando
+                éxito de cada tratamiento y sobre todo la satisfacción del paciente.</p>
+            <iframe class="googlemap"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3732.6218183881774!2d-103.3807526!3d20.6849594!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428ae153f69a8ab%3A0x6206ba4f047d9e38!2sCentro%20L%C3%B3pez%20Mateos!5e0!3m2!1ses!2smx!4v1668391426546!5m2!1ses!2smx"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
 
-        <div class="icono__contenedor"><img class="icono" src="./img/mapa.png"></div>
-        <h4 class="titulo__ubicacion">Ubicación</h4>
-        <p>En Núcleo dental somos un grupo de odontólogos dispuestos al diagnóstico, tratamiento y prevención de las
-            enfermedades que afectan al Aparato Estomatognático de la manera más amable y responsable, siempre buscando
-            éxito de cada tratamiento y sobre todo la satisfacción del paciente.</p>
-        <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3732.6218183881774!2d-103.3807526!3d20.6849594!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428ae153f69a8ab%3A0x6206ba4f047d9e38!2sCentro%20L%C3%B3pez%20Mateos!5e0!3m2!1ses!2smx!4v1668391426546!5m2!1ses!2smx" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
-         </article>
+        <article class="contenedor__ubicacion--linea">
 
-         <article class="contenedor__ubicacion--linea"></article>
+        </article>
 
 
-    
-    <article class="contenedor__ubicacion">
-        <div class="icono__contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
-        <h4 class="titulo__ubicacion">Contacto</h4>
-        <p>En Núcleo dental somos un grupo de odontólogos dispuestos al diagnóstico, tratamiento y prevención de las
-            enfermedades que afectan al Aparato Estomatognático de la manera más amable y responsable, siempre buscando
-            éxito de cada tratamiento y sobre todo la satisfacción del paciente.</p>
-    </article>
+
+        <article class="contenedor__ubicacion">
+            <div class="icono__contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
+            <h4 class="titulo__ubicacion">Contacto</h4>
+            <p>En Núcleo dental somos un grupo de odontólogos dispuestos al diagnóstico, tratamiento y prevención de las
+                enfermedades que afectan al Aparato Estomatognático de la manera más amable y responsable, siempre
+                buscando
+                éxito de cada tratamiento y sobre todo la satisfacción del paciente.</p>
+        </article>
+    </section>
 
 </main>
 <footer>
     <p>Todos los derechos reservados &copy; <a href="mailto:ps.enrique.e@gmail.com">Núcleo Dental</a>, Jal. Mexico, 2022</p>
-    <!-- <p> &copy; <a href="mailto:ps.enrique.e@gmail.com">Nucleo Dental </a>
-         <a href="https://www.facebook.com/proatencionmedica">
-        <svg xmlns="http://www.w3.org/2000/svg" class="red_social shadow" width="52" height="52"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-        </svg>
-    </a>
-    <a href="https://www.instagram.com/nucleodental.mzo/">
-        <svg xmlns="http://www.w3.org/2000/svg" class="red_social shadow" width="52" height="52"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <rect x="4" y="4" width="16" height="16" rx="4" />
-            <circle cx="12" cy="12" r="3" />
-            <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-        </svg>
-    </a>
-</p> -->
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
