Se corrigió ortografía

--- a/ubicacion.html
+++ b/ubicacion.html
@@ -139,8 +139,7 @@
         <article class="contenedor__ubicacion">
             <div class="icono__contenedor"><img class="icono" src="./img/bubble-chat.png"></div>
             <h4 class="titulo__ubicacion">Contacto</h4>
-            <p>¡Puedes enviarnos un WhatsApp haciendo clic en el boton! Preguntanos por algun tratamiento o agenda tu cita. Te
-                responderemos tan rapido como podamos.</p>
+            <p>¡Puedes enviarnos un WhatsApp haciendo clic en el botón! Pregúntanos por algún tratamiento o agenda tu cita. Te responderemos tan rápido como podamos.</p>
             <a class="btn--whatsapp shadow"
                 href="https://api.whatsapp.com/send?phone=523329147808&text=¡Hola%20N%C3%BAcleo%20Dental!">
                 <svg xmlns="http://www.w3.org/2000/svg" class="shadow icono_whatsapp" width="52" height="52" viewBox="0 0 24 24"
@@ -152,8 +151,7 @@
                 </svg>
                 Enviar WhatsApp</a>
 
-            <p>¡Tambien puedes encontrarnos en nuestras diferentes redes sociales, solo haz clic en el boton! Puedes solicitar la
-                informacion que necesites y te responderemos en cuanto estemos disponibles. ¡No te olvides de seguirnos!.</p>
+            <p>¡También puedes encontrarnos en nuestras diferentes redes sociales, solo haz clic en el botón! Puedes solicitar la información que necesites y te responderemos en cuanto estemos disponibles. ¡No te olvides de seguirnos!.</p>
             <div class="redes_sociales--inline">
                 <a class="shadow red_social--instagram" href="https://www.instagram.com/nucleodental.mzo/">
                     <svg xmlns="http://www.w3.org/2000/svg" class="shadow instagram--inline" width="52" height="52"
