--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <header>     
-        <h1><a href="index.html">Núcleo Dental</a></h1>
+        <h1><a href="index.html"><img class="header--logo" src="img/logo.png"> Núcleo Dental</a></h1>
     </header>
 <!-- Inicio navegacion -->
 
